# portfolio

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  Dockerfile  Dockerfile.prod  Makefile  README.md  docker-compose.nginx.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  nginx.conf  pyproject.toml  renew-ssl.sh  requirements.txt  workouts_export.csv
.github/workflows/: code-quality.yml  deploy.yml  security.yml
apps/home/: admin.py  models.py  urls.py  views.py
apps/home/migrations/: 0001_initial.py  0002_projet_github_url.py  0003_alter_projet_description.py  0004_rename_description_projet_description_en_and_more.py  0005_testimonial.py  0006_exercice_typeworkout_workout_oneexercice.py  0007_rename_name_en_exercice_name_remove_exercice_name_fr.py  0008_alter_oneexercice_time.py  0009_alter_oneexercice_time.py  0010_alter_oneexercice_time.py  0011_remove_oneexercice_time.py  0012_remove_oneexercice_name_remove_oneexercice_seance_and_more.py  0013_alter_tag_options.py
apps/newsfeed/: admin.py  models.py  urls.py  views.py
apps/newsfeed/migrations/: 0001_initial.py  0002_article_author_article_image_url_article_is_featured_and_more.py  0003_feedfetchtask.py
apps/workout/: admin.py  apps.py  models.py  urls.py  views.py
apps/workout/migrations/: 0001_initial.py  0002_workout_duration.py  0003_alter_workout_duration.py  0004_workout_name_workout_en_workout_name_workout_fr.py  0005_rename_name_typeworkout_name_workout_fr_and_more.py  0006_remove_oneexercice_nb_repetition_and_more.py  0007_rename_name_workout_fr_typeworkout_name_workout_and_more.py  0008_alter_oneexercice_options_oneexercice_position.py  0009_auto_20250926_2113.py  0010_equipment_musclegroup_exercice_difficulty_and_more.py  0011_personalrecord.py  0012_delete_personalrecord.py  0013_add_series_logs.py  0014_migrate_to_series.py  0015_templateexercise_templatecardioseries_and_more.py  0016_remove_strengthexerciselog_exercise_and_more.py  0017_remove_oneexercice_generic_fk.py
apps/workout/templatetags/: custom_filters.py
data/LOCAL/: exercises_LOCAL_2025-02-17.csv  home_LOCAL_2025-03-20.json  workout_LOCAL_2025-02-17.csv
data/PROD/: exercises_PROD_2025-03-15.csv  home_PROD_2025-03-20.json  workout_PROD_2025-03-15.csv  workout_PROD_2025-03-20.csv
dockerfiles/nginx/: Dockerfile  Dockerfile.prod  nginx.conf  nginx.prod.conf
dockerfiles/web/: Dockerfile  Dockerfile.prod
home/: admin.py  models.py  urls.py  views.py
home/migrations/: 0004_rename_description_projet_description_en_and_more.py  0005_testimonial.py  0010_alter_oneexercice_time.py  0012_remove_oneexercice_name_remove_oneexercice_seance_and_more.py
mysite/: settings.py  urls.py
ssl/: .gitkeep
workout/: admin.py  admin_views.py  models.py  urls.py  views.py
workout/migrations/: 0004_workout_name_workout_en_workout_name_workout_fr.py
(+87 files in other folders)
