[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "portfolio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asgiref==3.8.1",
    "django==5.1.13",
    "feedparser==6.0.12",
    "gunicorn==23.0.0",
    "pre-commit>=4.3.0",
    "psycopg2-binary==2.9.10",
    "python-dotenv==1.0.1",
    "requests==2.32.5",
    "sqlparse==0.5.3",
    "typing-extensions==4.12.2",
]

[project.optional-dependencies]
dev = [
    "black>=24.10.0",
    "isort>=5.13.0",
    "flake8>=7.1.0",
    "flake8-docstrings>=1.7.0",
    "flake8-bugbear>=24.8.0",
    "pylint>=3.3.0",
    "mypy>=1.11.0",
    "django-stubs>=5.1.0",
    "types-requests>=2.32.0",
    "bandit[toml]>=1.7.10",
    "safety>=3.2.0",
    "pip-audit>=2.7.0",
    "pre-commit>=3.8.0",
]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/migrations/*"]

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = ["mypy_django_plugin.main"]

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "mysite.settings"

[tool.pylint.main]
load-plugins = ["pylint_django"]
django-settings-module = "mysite.settings"
ignore = ["migrations", ".venv", "venv"]

[tool.pylint.format]
max-line-length = 88

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "R0903",  # too-few-public-methods
]

[tool.bandit]
exclude_dirs = ["/tests", "*/migrations/*", ".venv", "venv"]
skips = ["B101", "B601"]

[tool.bandit.assert_used]
skips = ["*/test_*.py", "*/tests.py"]

[tool.setuptools.package-data]
"*" = ["*.html", "*.css", "*.js", "*.json", "*.txt", "*.po", "*.mo"]
